--- a/src/styles/warthog.css
+++ b/src/styles/warthog.css
@@ -2,6 +2,17 @@
 
 /* Import Fonts from Wallet.css */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Press+Start+2P&family=Orbitron:wght@400;700&family=Roboto:wght@400;500&display=swap');
+
+
+
+.tx-log-item {
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+
 .controls {
   display: flex;
   gap: 1rem;
